--- a/src/main/resources/templates/admin/chartByDateRange.html
+++ b/src/main/resources/templates/admin/chartByDateRange.html
@@ -1,21 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset=utf-8>
-    <meta http-equiv=X-UA-Compatible content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="refresh" content="600"/>
-    <!-- Font Awesome -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-<!-- Google Fonts Roboto -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-<!-- Bootstrap core CSS -->
-<link rel="stylesheet" href="../css/bootstrap.css">
-<link rel="stylesheet" href="../css/dashboard.css">
-<link rel=icon href=../img/favicon.ico>
-<title>CSCParts - Dashboard</title>
-
-  </head>
+<div th:replace="headLayout :: head"></div>
   <body>
     <header>
       <!-- Bootstrap NavBar -->
@@ -24,7 +9,7 @@
   <div class="container-fluid">
     <div class="row">
       <th:block th:if=${!isFullScreen}>
-      <div th:replace="sideBarMenuLayout :: sideBarMenu(homeListClass='nav-item',todayListClass='nav-item bg-info',thisMonthListClass='nav-item',lastMonthListClass='nav-item',last3MonthsListClass='nav-item',homeLinkClass='nav-link',todayLinkClass='nav-link text-warning',thisMonthLinkClass='nav-link',lastMonthLinkClass='nav-link',last3MonthsLinkClass='nav-link')"> </div>
+      <div th:replace="sideBarMenuLayout :: sideBarMenu(homeListClass='nav-item',todayListClass='nav-item',thisMonthListClass='nav-item',lastMonthListClass='nav-item',last3MonthsListClass='nav-item',byDateRangeListClass='nav-item bg-info',homeLinkClass='nav-link',todayLinkClass='nav-link',thisMonthLinkClass='nav-link',lastMonthLinkClass='nav-link',last3MonthsLinkClass='nav-link',byDateRangeLinkClass='nav-link text-warning')"></div>
     </th:block>
             <main id="mainContent" role="main" th:class="${isFullScreen?'col-md-12 ml-sm-auto col-lg-12 px-md-1':'col-md-9 ml-sm-auto col-lg-10 px-md-1'}">
               <div class="col-md-12">
@@ -32,56 +17,46 @@
                   <div class="col-1 text-primary">
                     <span id="sideMenuArrow" style="visibility: hidden;cursor: pointer;" class="fa fa-arrow-right fa-fw mr-3 text-dark" onclick="showSideBar()"></span>
                   </div>
-                  <div class="col-6">
-                    <span class="h3">DASHBOARD</span><span class="h6" th:text="${' Quotes , Orders & Invoices -  Today ('+toDay+')'}"></span>
+                  <div class="col-6 text-primary">
+                    <span class="h3">DASHBOARD</span><span class="h6" th:text="${' Quotes , Orders & Invoices'}"></span>
                   </div>
-                  
-                </div>
-                 <div class="album py-3 px-2 bg-light">
-                  <div class="row">
-                      <div class="col-md-4">
-                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Quotes',guageDiv='guage_div_quotes',totalValue=${salesQuotesDaily},totalStyle='background-color: #00bfff;',targetValue=${salesQuotesTargetDaily},targetStyle='background-color: #ff85e6;',qtyValue=${salesQuotesQtyDaily}, qtyTarget=${salesQuotesTargetQtyDaily},avgValue=${averageDailyQuotes},avgTarget=${averageDailyQuotesTarget},avgProfitValue=${averageDailyQuotesProfit},avgProfitTarget=${averageDailyQuotesProfitTarget},graphDiv='graph_div_quotes')"></div>
-                      </div>
-                      <div class="col-md-4">
-                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Orders',guageDiv='guage_div_orders',totalValue=${salesOrderedDaily},totalStyle='background-color: #f9ae06;', targetValue=${salesOrderedTargetDaily},targetStyle='background-color: #fff67e;color:black', qtyValue=${salesOrderedQtyDaily}, qtyTarget=${salesOrderedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyOrdersProfit},avgProfitTarget=${averageDailyOrdersProfitTarget},graphDiv='graph_div_orders')"> </div>
-                      </div>
-                      <div class="col-md-4">
-                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Invoices',guageDiv='guage_div_invoices',totalValue=${salesInvoicedDaily},totalStyle='background-color: #0b4119;color:white;', targetValue=${salesInvoicedTargetDaily},targetStyle='background-color: #92edaa;color:black', qtyValue=${salesInvoicedQtyDaily}, qtyTarget=${salesInvoicedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyInvoicesProfit},avgProfitTarget=${averageDailyInvoicesProfitTarget},graphDiv='graph_div_invoices')"> </div>
-                      </div>   
+                  <div class="col-5 text-primary text-right">
+                    <span class="h3">FROM </span><span class="h4" th:text="${fromDate}"></span><span class="h3"> TO </span><span class="h4" th:text="${toDate}"></span>
                   </div>
                 </div>
+         <div class="album py-3 px-2 bg-light">
+          <div class="row">
+              <div class="col-md-4">
+                <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Quotes',guageDiv='guage_div_quotes',totalValue=${salesQuotesLastThreeMonths},totalStyle='background-color: #00bfff;', targetValue=${salesQuotesTargetLastThreeMonths},targetStyle='background-color: #ff85e6;', qtyValue=${salesQuotesQtyLastThreeMonths}, qtyTarget=${salesQuotesTargetQtyLastThreeMonths},avgValue=${averageLastThreeMonthsQuotes},avgTarget=${averageLastThreeMonthsQuotesTarget},avgProfitValue=${averageLastThreeMonthsQuotesProfit},avgProfitTarget=${averageLastThreeMonthsQuotesProfitTarget},targetAchieved=${targetAchievedQuotes},graphDiv='graph_div_quotes')"></div>
+              </div>
+              <div class="col-md-4">
+                <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Orders',guageDiv='guage_div_orders',totalValue=${salesOrderedLastThreeMonths},totalStyle='background-color: #f9ae06;', targetValue=${salesOrderedTargetLastThreeMonths},targetStyle='background-color: #fff67e;color:black', qtyValue=${salesOrderedQtyLastThreeMonths}, qtyTarget=${salesOrderedTargetQtyLastThreeMonths},avgValue=${averageLastThreeMonthsOrders},avgTarget=${averageLastThreeMonthsOrdersTarget},avgProfitValue=${averageLastThreeMonthsOrdersProfit},avgProfitTarget=${averageLastThreeMonthsOrdersProfitTarget},targetAchieved=${targetAchievedOrders},graphDiv='graph_div_orders')"></div>
+              </div>
+              <div class="col-md-4">
+                <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Invoices',guageDiv='guage_div_invoices',totalValue=${salesInvoicedLastThreeMonths},totalStyle='background-color: #0b4119;color:white;', targetValue=${salesInvoicedTargetLastThreeMonths},targetStyle='background-color: #92edaa;color:black', qtyValue=${salesInvoicedQtyLastThreeMonths}, qtyTarget=${salesInvoicedTargetQtyLastThreeMonths},avgValue=${averageLastThreeMonthsInvoices},avgTarget=${averageLastThreeMonthsInvoicesTarget},avgProfitValue=${averageLastThreeMonthsInvoicesProfit},avgProfitTarget=${averageLastThreeMonthsInvoicesProfitTarget},targetAchieved=${targetAchievedInvoices},graphDiv='graph_div_invoices')"> </div>
+              </div>
+            </div>
+          </div>
               </div>
             </main>
-      </div>
-  </div>
-  
+            </div>
+         </div>
         <!-- Footer -->
-<footer class="footer mt-auto py-3">
-  <div th:replace="footerLayout :: footer"> </div>
-</footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- jQuery -->
-<script type="text/javascript" src="../js/jquery.js"></script>
-<!-- Bootstrap tooltips -->
-<script type="text/javascript" src="../js/popper.js"></script>
-<!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="../js/bootstrap.js"></script>
-<!-- Google chart -->
-<script type="text/javascript" src="../js/loader.js"></script>
-<script type="text/javascript" src="../js/custom.js"></script>
+        <footer class="footer mt-auto py-3">
+          <div th:replace="footerLayout :: footer"> </div>
+        </footer>
+    
 <script th:inline="javascript">
-  
-  /*<![CDATA[*/
+ /*<![CDATA[*/
 
-  var salesOrderedDaily = /*[[${salesOrderedDaily}]]*/ '0';
-  var salesInvoicedDaily = /*[[${salesInvoicedDaily}]]*/ '0';
-  var salesQuotesDaily = /*[[${salesQuotesDaily}]]*/ '0';
-  var salesTargetDaily = /*[[${salesTargetDaily}]]*/ '0';
-  console.log('salesOrderedDaily-->'+salesOrderedDaily);
-  console.log('salesInvoicedDaily-->'+salesInvoicedDaily);
-  console.log('salesQuotesDaily-->'+salesQuotesDaily);
-  console.log('salesTargetDaily-->'+salesTargetDaily);
+  var salesOrderedLastThreeMonths = /*[[${salesOrderedLastThreeMonths}]]*/ '0';
+  var salesInvoicedLastThreeMonths = /*[[${salesInvoicedLastThreeMonths}]]*/ '0';
+  var salesQuotesLastThreeMonths = /*[[${salesQuotesLastThreeMonths}]]*/ '0';
+  var salesTargetLastThreeMonths = /*[[${salesTargetLastThreeMonths}]]*/ '0';
+  console.log('salesOrderedLastThreeMonths-->'+salesOrderedLastThreeMonths);
+  console.log('salesInvoicedLastThreeMonths-->'+salesInvoicedLastThreeMonths);
+  console.log('salesQuotesLastThreeMonths-->'+salesQuotesLastThreeMonths);
+  console.log('salesTargetLastThreeMonths-->'+salesTargetLastThreeMonths);
 
   var targetAchievedOrders = /*[[${targetAchievedOrders}]]*/ 0;
   var targetAchievedQuotes = /*[[${targetAchievedQuotes}]]*/ 0;
@@ -89,19 +64,26 @@
   console.log('targetAchievedOrders-->'+targetAchievedOrders);
   console.log('targetAchievedQuotes-->'+targetAchievedQuotes);
   console.log('targetAchievedInvoices-->'+targetAchievedInvoices);
-  
   var salesOrderTargets = /*[[${salesOrderTargets}]]*/ [];
   var salesQuoteTargets = /*[[${salesQuoteTargets}]]*/ [];
   var salesInvoiceTargets = /*[[${salesInvoiceTargets}]]*/ [];
   
   var salesOrderTargetArr = [];
   salesOrderTargetArr.push(["Date","Actual","Target","Daily Avg"]);
+  if(salesOrderTargets.length == 0)
+  {
+    salesOrderTargetArr.push(["0",0,0,0]);
+  }
   for (i = 0; i < salesOrderTargets.length; i++) {
     salesOrderTargetArr.push([salesOrderTargets[i].date.split("T")[0].split("-")[2]+'/'+salesOrderTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesOrderTargets[i].total.toFixed(2)),parseFloat(salesOrderTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesOrderTargets[i].averageTotal.toFixed(2))]);
   }
   console.log('salesOrderTargetArr-->'+salesOrderTargetArr);
   var salesQuoteTargetArr = [];
   salesQuoteTargetArr.push(["Date","Actual","Target","Daily Avg"]);
+  if(salesQuoteTargets.length == 0)
+  {
+    salesQuoteTargetArr.push(["0",0,0,0]);
+  }
   for (i = 0; i < salesQuoteTargets.length; i++) {
     salesQuoteTargetArr.push([salesQuoteTargets[i].date.split("T")[0].split("-")[2]+'/'+salesQuoteTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesQuoteTargets[i].total.toFixed(2)),parseFloat(salesQuoteTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesQuoteTargets[i].averageTotal.toFixed(2))]);
   }
@@ -109,10 +91,15 @@
 
   var salesInvoiceTargetArr = [];
   salesInvoiceTargetArr.push(["Date","Actual","Target","Daily Avg"]);
+  if(salesInvoiceTargets.length == 0)
+  {
+    salesInvoiceTargetArr.push(["0",0,0,0]);
+  }
   for (i = 0; i < salesInvoiceTargets.length; i++) {
     salesInvoiceTargetArr.push([salesInvoiceTargets[i].date.split("T")[0].split("-")[2]+'/'+salesInvoiceTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesInvoiceTargets[i].total.toFixed(2)),parseFloat(salesInvoiceTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesInvoiceTargets[i].averageTotal.toFixed(2))]);
   }
   console.log('salesInvoiceTargetArr-->'+salesInvoiceTargetArr);
+
 /*]]>*/
   google.charts.load('current', {packages: ['corechart','gauge','bar']});
   google.charts.setOnLoadCallback(drawChart);
@@ -154,7 +141,7 @@
           greenColor:'#fff67e',
           greenFrom:targetAchievedOrders,
           greenTo: 100,
-          minorTicks: 5,
+          minorTicks: 5
         };
 
         var chartOrders = new google.visualization.Gauge(document.getElementById('guage_div_orders'));
@@ -188,18 +175,15 @@
         var dataGraphInvoicesOptions = {
           width: 400,
           legend:'top',
-          title: 'Sales vs Target Last 7 Days',
-          vAxis: {title: 'Amount($)'},
+          title: 'Sales vs Target Last 30 Days',
+          vAxis: {
+            // Adds titles to each axis.
+          0: {title: 'Actual($)'},
+          1: {title: 'Target($)'}
+          },
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {axis: 'Actual',color : '#0b4119'},1: {axis: 'Target',type: 'line',color : '#92edaa'},2: {type: 'line',color : 'red'}},
-          axes: {
-          // Adds labels to each axis; they don't have to match the axis names.
-          y: {
-            Actual: {label: 'Amount($)'},
-            Target: {label: 'Amount($)'}
-          }
-          }
+          series: {0: {targetAxisIndex: 0,color : '#0b4119'},1: {targetAxisIndex: 1,type: 'area',color : '#92edaa'},2: {type: 'line',color : 'red'}}
         };
         var graphInvoices = new google.visualization.ComboChart(graph_div_invoices);
         graphInvoices.draw(dataGraphInvoices, dataGraphInvoicesOptions);
@@ -209,18 +193,15 @@
         var dataGraphOrdersOptions = {
           width: 400,
           legend:'top',
-          title: 'Sales vs Target Last 7 Days',
-          vAxis: {title: 'Amount($)'},
+          title: 'Sales vs Target Last 30 Days',
+          vAxis: {
+            // Adds titles to each axis.
+          0: {title: 'Actual($)'},
+          1: {title: 'Target($)'}
+          },
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {axis: 'Actual',color : '#f9ae06'},1: {axis: 'Target',type: 'line',color : '#fff67e'},2: {type: 'line',color : 'red'}},
-          axes: {
-          // Adds labels to each axis; they don't have to match the axis names.
-          y: {
-            Actual: {label: 'Amount($)'},
-            Target: {label: 'Amount($)'}
-          }
-        }
+          series: {0: {targetAxisIndex: 0,color : '#f9ae06'},1: {targetAxisIndex: 1,type: 'area',color : '#fff67e'},2: {type: 'line',color : 'red'}}
         };
         var graphOrders = new google.visualization.ComboChart(graph_div_orders);
         graphOrders.draw(dataGraphOrders, dataGraphOrdersOptions);
@@ -231,23 +212,20 @@
           width: 400,
           legend:'top',
           title: 'Sales vs Target',
-          title: 'Sales vs Target Last 7 Days',
-          vAxis: {title: 'Amount($)'},
+          title: 'Sales vs Target Last 30 Days',
+          vAxis: {
+          // Adds titles to each axis.
+          0: {title: 'Actual($)'},
+          1: {title: 'Target($)'}
+          },
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {axis: 'Actual',color : '#00bfff'},1: {axis: 'Target',type: 'line',color : '#ff85e6'},2: {type: 'line',color : 'red'}},
-          axes: {
-          // Adds labels to each axis; they don't have to match the axis names.
-          y: {
-            Actual: {label: 'Amount($)'},
-            Target: {label: 'Amount($)'}
-          }
-          }
+          series: {0: {targetAxisIndex: 0,color : '#00bfff'},1: {targetAxisIndex: 1,type: 'area',color : '#ff85e6'},2: {type: 'line',color : 'red'}}
         };
         var graphQuotes = new google.visualization.ComboChart(graph_div_quotes);
         graphQuotes.draw(dataGraphQuotes, dataGraphQuotesOptions);
   }
   
     </script>
- </body>
+  </body>
     </html>
