--- a/src/main/resources/templates/admin/chartLastThreeMonths.html
+++ b/src/main/resources/templates/admin/chartLastThreeMonths.html
@@ -1,21 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset=utf-8>
-    <meta http-equiv=X-UA-Compatible content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="refresh" content="600"/>
-    <!-- Font Awesome -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-<!-- Google Fonts Roboto -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-<!-- Bootstrap core CSS -->
-<link rel="stylesheet" href="../css/bootstrap.css">
-<link rel="stylesheet" href="../css/dashboard.css">
-<link rel=icon href=../img/favicon.ico>
-<title>CSCParts - Dashboard</title>
-
-  </head>
+<div th:replace="headLayout :: head"></div>
   <body>
     <header>
       <!-- Bootstrap NavBar -->
@@ -24,7 +9,7 @@
   <div class="container-fluid">
     <div class="row">
       <th:block th:if=${!isFullScreen}>
-      <div th:replace="sideBarMenuLayout :: sideBarMenu(homeListClass='nav-item',todayListClass='nav-item',thisMonthListClass='nav-item',lastMonthListClass='nav-item',last3MonthsListClass='nav-item bg-info',homeLinkClass='nav-link',todayLinkClass='nav-link',thisMonthLinkClass='nav-link',lastMonthLinkClass='nav-link',last3MonthsLinkClass='nav-link text-warning')"></div>
+      <div th:replace="sideBarMenuLayout :: sideBarMenu(homeListClass='nav-item',todayListClass='nav-item',thisMonthListClass='nav-item',lastMonthListClass='nav-item',last3MonthsListClass='nav-item bg-info',byDateRangeListClass='nav-item',homeLinkClass='nav-link',todayLinkClass='nav-link',thisMonthLinkClass='nav-link',lastMonthLinkClass='nav-link',last3MonthsLinkClass='nav-link text-warning',byDateRangeLinkClass='nav-link')"></div>
     </th:block>
             <main id="mainContent" role="main" th:class="${isFullScreen?'col-md-12 ml-sm-auto col-lg-12 px-md-1':'col-md-9 ml-sm-auto col-lg-10 px-md-1'}">
               <div class="col-md-12">
@@ -60,18 +45,7 @@
         <footer class="footer mt-auto py-3">
           <div th:replace="footerLayout :: footer"> </div>
         </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- jQuery -->
-<script type="text/javascript" src="../js/jquery.js"></script>
-<!-- Bootstrap tooltips -->
-<script type="text/javascript" src="../js/popper.js"></script>
-<!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="../js/bootstrap.js"></script>
-<!-- Google chart -->
-<script type="text/javascript" src="../js/loader.js"></script>
-<script type="text/javascript" src="../js/custom.js"></script>
-<script th:inline="javascript">
+    <script th:inline="javascript">
   
   /*<![CDATA[*/
 
