--- a/src/main/resources/templates/admin/chartToday.html
+++ b/src/main/resources/templates/admin/chartToday.html
@@ -27,13 +27,13 @@
                 <div class="album py-3 px-2 bg-light">
                   <div class="row">
                       <div class="col-md-4">
-                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Quotes',guageDiv='guage_div_quotes',totalValue=${salesQuotesDaily},totalStyle='background-color: #00bfff;',targetValue=${salesQuotesTargetDaily},targetStyle='background-color: #ff85e6;',qtyValue=${salesQuotesQtyDaily}, qtyTarget=${salesQuotesTargetQtyDaily},avgValue=${averageDailyQuotes},avgTarget=${averageDailyQuotesTarget},avgProfitValue=${averageDailyQuotesProfit},avgProfitTarget=${averageDailyQuotesProfitTarget},targetAchieved=${targetAchievedQuotes},graphDiv='graph_div_quotes',totalValueGraphTop=${salesQuotesDaily},targetValueGraphTop=${salesQuotesTargetDaily},percentageOfTargetGraphTop=${targetAchievedQuotes},runRateGraphTop=${salesQuotesDaily})"></div>
+                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Quotes',guageDiv='guage_div_quotes',totalValue=${salesQuotesDaily},totalStyle='background-color: #00bfff;',targetValue=${salesQuotesTargetDaily},targetStyle='background-color: #ff85e6;',qtyValue=${salesQuotesQtyDaily}, qtyTarget=${salesQuotesTargetQtyDaily},avgValue=${averageDailyQuotes},avgTarget=${averageDailyQuotesTarget},avgProfitValue=${averageDailyQuotesProfit},avgProfitTarget=${averageDailyQuotesProfitTarget},targetAchieved=${targetAchievedQuotes},graphDiv='graph_div_quotes',totalValueGraphTop=${salesQuotesDaily},targetValueGraphTop=${salesQuotesTargetDaily},percentageOfTargetGraphTop=${targetAchievedQuotes},runRateGraphTop=${salesQuotesDaily},titleGraphTop='Quotes vs Target - Month to-Date')"></div>
                       </div>
                       <div class="col-md-4">
-                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Orders',guageDiv='guage_div_orders',totalValue=${salesOrderedDaily},totalStyle='background-color: #f9ae06;', targetValue=${salesOrderedTargetDaily},targetStyle='background-color: #fff67e;color:black', qtyValue=${salesOrderedQtyDaily}, qtyTarget=${salesOrderedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyOrdersProfit},avgProfitTarget=${averageDailyOrdersProfitTarget},targetAchieved=${targetAchievedOrders},graphDiv='graph_div_orders',totalValueGraphTop=${salesOrderedDaily},targetValueGraphTop=${salesOrderedTargetDaily},percentageOfTargetGraphTop=${targetAchievedOrders},runRateGraphTop=${salesOrderedDaily})"> </div>
+                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Orders',guageDiv='guage_div_orders',totalValue=${salesOrderedDaily},totalStyle='background-color: #f9ae06;', targetValue=${salesOrderedTargetDaily},targetStyle='background-color: #fff67e;color:black', qtyValue=${salesOrderedQtyDaily}, qtyTarget=${salesOrderedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyOrdersProfit},avgProfitTarget=${averageDailyOrdersProfitTarget},targetAchieved=${targetAchievedOrders},graphDiv='graph_div_orders',totalValueGraphTop=${salesOrderedDaily},targetValueGraphTop=${salesOrderedTargetDaily},percentageOfTargetGraphTop=${targetAchievedOrders},runRateGraphTop=${salesOrderedDaily},titleGraphTop='Orders vs Target - Month to-Date')"> </div>
                       </div>
                       <div class="col-md-4">
-                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Invoices',guageDiv='guage_div_invoices',totalValue=${salesInvoicedDaily},totalStyle='background-color: #0b4119;color:white;', targetValue=${salesInvoicedTargetDaily},targetStyle='background-color: #92edaa;color:black', qtyValue=${salesInvoicedQtyDaily}, qtyTarget=${salesInvoicedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyInvoicesProfit},avgProfitTarget=${averageDailyInvoicesProfitTarget},targetAchieved=${targetAchievedInvoices},graphDiv='graph_div_invoices',totalValueGraphTop=${salesInvoicedDaily},targetValueGraphTop=${salesInvoicedTargetDaily},percentageOfTargetGraphTop=${targetAchievedInvoices},runRateGraphTop=${salesInvoicedDaily})"> </div>
+                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Invoices',guageDiv='guage_div_invoices',totalValue=${salesInvoicedDaily},totalStyle='background-color: #0b4119;color:white;', targetValue=${salesInvoicedTargetDaily},targetStyle='background-color: #92edaa;color:black', qtyValue=${salesInvoicedQtyDaily}, qtyTarget=${salesInvoicedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyInvoicesProfit},avgProfitTarget=${averageDailyInvoicesProfitTarget},targetAchieved=${targetAchievedInvoices},graphDiv='graph_div_invoices',totalValueGraphTop=${salesInvoicedDaily},targetValueGraphTop=${salesInvoicedTargetDaily},percentageOfTargetGraphTop=${targetAchievedInvoices},runRateGraphTop=${salesInvoicedDaily},titleGraphTop='Invoices vs Target - Month to-Date')"> </div>
                       </div>   
                   </div>
                 </div>
@@ -77,7 +77,7 @@
     salesOrderTargetArr.push(["0",0,0,0]);
   }
   for (i = 0; i < salesOrderTargets.length; i++) {
-    salesOrderTargetArr.push([salesOrderTargets[i].date.split("T")[0].split("-")[2]+'/'+salesOrderTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesOrderTargets[i].total.toFixed(2)),parseFloat(salesOrderTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesOrderTargets[i].totalTarget.toFixed(2))]);
+    salesOrderTargetArr.push(['Day '+(i+1),parseFloat(salesOrderTargets[i].total.toFixed(2)),parseFloat(salesOrderTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesOrderTargets[i].totalTarget.toFixed(2))]);
   }
   console.log('salesOrderTargetArr-->'+salesOrderTargetArr);
   var salesQuoteTargetArr = [];
@@ -87,7 +87,7 @@
     salesQuoteTargetArr.push(["0",0,0,0]);
   }
   for (i = 0; i < salesQuoteTargets.length; i++) {
-    salesQuoteTargetArr.push([salesQuoteTargets[i].date.split("T")[0].split("-")[2]+'/'+salesQuoteTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesQuoteTargets[i].total.toFixed(2)),parseFloat(salesQuoteTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesQuoteTargets[i].totalTarget.toFixed(2))]);
+    salesQuoteTargetArr.push(['Day '+(i+1),parseFloat(salesQuoteTargets[i].total.toFixed(2)),parseFloat(salesQuoteTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesQuoteTargets[i].totalTarget.toFixed(2))]);
   }
   console.log('salesQuoteTargetArr-->'+salesQuoteTargetArr);
 
@@ -98,7 +98,7 @@
     salesInvoiceTargetArr.push(["0",0,0,0]);
   }
   for (i = 0; i < salesInvoiceTargets.length; i++) {
-    salesInvoiceTargetArr.push([salesInvoiceTargets[i].date.split("T")[0].split("-")[2]+'/'+salesInvoiceTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesInvoiceTargets[i].total.toFixed(2)),parseFloat(salesInvoiceTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesInvoiceTargets[i].totalTarget.toFixed(2))]);
+    salesInvoiceTargetArr.push(['Day '+(i+1),parseFloat(salesInvoiceTargets[i].total.toFixed(2)),parseFloat(salesInvoiceTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesInvoiceTargets[i].totalTarget.toFixed(2))]);
   }
   console.log('salesInvoiceTargetArr-->'+salesInvoiceTargetArr);
 /*]]>*/
@@ -176,7 +176,7 @@
         var dataGraphInvoicesOptions = {
           width: 400,
           legend:'top',
-          title: 'Invoices vs Target - Month to Date',
+          title: '',
           vAxis: {
             // Adds titles to each axis.
           0: {title: 'Actual($)'},
@@ -194,7 +194,7 @@
         var dataGraphOrdersOptions = {
           width: 400,
           legend:'top',
-          title: 'Orders vs Target - Month to Date',
+          title: '',
           vAxis: {
             // Adds titles to each axis.
           0: {title: 'Actual($)'},
@@ -212,7 +212,7 @@
         var dataGraphQuotesOptions = {
           width: 400,
           legend:'top',
-          title: 'Quotes vs Target - Month to Date',
+          title: '',
           vAxis: {
           // Adds titles to each axis.
           0: {title: 'Actual($)'},
